[package]
name = "interactive_analytics"
version = "0.1.0"
edition = "2021"
authors = ["Sandeep Sandhu"]
description = "A web based analytics platform built for developing interactive analytics embedding data transformation and ML models, powered by Rust"
repository = "https://github.com/sandeep-sandhu/interactive-analytics"
keywords = ["analytics", "data transformations", "machine learning", "MLops", "Model deployment", "Data Science", "Web"]
readme = "README.md"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
chrono = "0.4.24"
rand = "0.8.5"
